# levin-study-assistant

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/app/: __init__.py  cache.py  config.py  models.py  router.py  utils.py
backend/tests/: test_cache.py  test_routes.py  test_utils.py
extension/: background.js  content.js  manifest.json  sidepanel.css  sidepanel.html  sidepanel.js
extension/js/: api.js  capture.js  detector.js  monitor-detect.js  timer.js  ui.js
