[tool.poetry]
name = "study-assistant-backend"
version = "0.1.0"
description = "Backend API for the Study Assistant Chrome extension"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.111.0"
uvicorn = { version = ">=0.29.0", extras = ["standard"] }
langchain-openai = ">=0.1.0"
langchain-core = ">=0.2.0"
langgraph = ">=0.2.0"
langgraph-checkpoint-sqlite = ">=2.0.0"
python-dotenv = ">=1.0.0"
pydantic = ">=2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
